fixed out of place btn hover

--- a/assets/stylesheets/modules/_sidebar-menu.scss
+++ b/assets/stylesheets/modules/_sidebar-menu.scss
@@ -196,13 +196,13 @@
   &::before {
     background-color: #faa6ff;
     left: -10%;
-    top: 35%;
+    top: 12px;
   }
 
   &::after {
     background-color: #62dbff;
     right: -11%;
-    top: -10%;
+    top: -3px;
   }
 
   body.active & {
@@ -220,7 +220,7 @@
     outline: none;
 
     &::before, &::after {
-      top: 15%;
+      top: 4px;
       background-color: #5000ff;
       opacity: 1;
     }
